[project]
name = "rocco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Rakib Akram", email = "rakibakram55@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.63.8",
]

[project.scripts]
Rocco = "rocco:main"
var="rocco.print:sum"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
